--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  background-color: #e2e2e2;
   font: normal 100%/1.3 sans-serif;
 }
 
@@ -22,12 +21,17 @@ body {
   margin: 0;
 }
 
+section {
+  background-color: #e2e2e2;
+}
+
 img {
   width: 100%;
 }
 
 .text {
   padding: 1rem;
+  text-align: left;
 }
 
 .text p {
@@ -35,14 +39,27 @@ img {
   margin-bottom: 1rem;
 }
 
+.text h1 {
+  margin-top: 0;
+}
+
 a {
   display: inline-block;
   text-decoration: none;
-  font-size: 1.125rem;
   color: #fff;
   background-color: #555;
   padding:0.5em 0.75em;
   border-radius: 4px;
+}
+
+a:hover {
+  background-color: #000;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+  padding-top: 1rem;
 }
 
 @media only screen and (min-width: 25em) {
@@ -57,17 +74,21 @@ a {
   }
 
   section {
-    overflow: hidden;
+    padding: 1rem 0;
   }
 
-  .img-flex {
+  .image {
     display: inline-block;
+    max-width: 25em;
     width: 50%;
+    vertical-align: middle;
   }
 
   .text {
     display: inline-block;
+    max-width: 25em;
     width: 48%;
+    vertical-align: middle;
   }
 }
 
