css best practices

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ a {
   text-decoration: none;
   color: #fff;
   background-color: #555;
-  padding:0.5em 0.75em;
+  padding: .5em .75em;
   border-radius: 4px;
 }
 
@@ -63,7 +63,6 @@ a:hover {
 }
 
 @media only screen and (min-width: 25em) {
-
 }
 
 @media only screen and (min-width: 38em) {
