--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,10 @@ a:hover {
     font-size: 120%;
     line-height: 1.5;
   }
+
+  section {
+    text-align: center;
+  }
 }
 
 @media only screen and (min-width: 90em) {
