--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,11 @@ a:hover {
 }
 
 @media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
 }
 
 @media only screen and (min-width: 38em) {
